# cmake-cereal

./: README.md
cmake-cereal/: CMakeLists.txt  main.cpp
